# book

./: .env.example  .gitignore  README.md  create_docusaurus.js  render.yaml  start_server.py
.specify/003-sensors-actuators/: data-model.md  plan.md  quickstart.md  spec.md
.specify/004-ros2-control/: data-model.md  research.md  spec.md  tasks.md
.specify/005-ai-perception-integration/: plan.md  tasks.md
.specify/memory/: constitution.md
1-ch1-intro-physical-ai/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
1-ch1-intro-physical-ai/checklists/: requirements.md
2-ch2-embodied-intelligence/: data-model.md  plan.md  research.md  spec.md  tasks.md
2-ch2-embodied-intelligence/checklists/: requirements.md
ai-native-book/: .gitignore  CHATBOT_INTEGRATION.md  docusaurus.config.js  docusaurus.config.ts  package-lock.json  sidebars.js  sidebars.ts  tailwind.config.js  vercel.json
ai-native-book/blog/: 2021-08-01-mdx-blog-post.mdx  2024-12-24-welcome-physical-ai-robotics.md  authors.yml  tags.yml
ai-native-book/docs/: chatbot-integration.md  index.md
ai-native-book/pages/: index.js
backend/: __init__.py  main.py  pyproject.toml  render.yaml  requirements.txt  test_pipeline.py
backend/api/: main.py
backend/db/: chat_history.py  init_db.py
backend/openai_agent/: retrieval_agent.py
backend/qdrant/: vector_db.py
backend/qdrant_data/: meta.json
backend/rag/: document_ingestion.py  embeddings.py
backend/scripts/: ingest_book_content.py  ingest_from_vercel.py  reset_vector_db.py
frontend/: index.html
qdrant_data/: meta.json
(+66 files in other folders)
